--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://admin:admin@35.209.134.44:3306/book-computer_db"
+DATABASE_URL="mysql://username:password@156.67.218.234:3306/book-computer_db"
 
 API_PORT=5001
 SECRET_KEY=1D51D5DEC8F7CE6792E3FB54EA3DD
